objects/maps__AdvRouteDefaultValue__c.object
<CustomObject>
    <fields>
        <fullName>maps__AdvRouteDefaultValuesGrouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Advanced Route Default Values Group</label>
        <referenceTo>maps__AdvRouteDefaultValuesGrouping__c</referenceTo>
        <relationshipLabel>Maps Advanced Route Default Values</relationshipLabel>
        <relationshipName>AdvRouteDefaultValues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is value of the checkbox</description>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__DateValue__c</fullName>
        <description>This is the date value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>maps__FieldApi__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TimeValue__c</fullName>
        <label>Time Value</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>maps__Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Maps Advanced Default Value</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Maps Advanced Default Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Default Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>